# tlsserial

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tlsserial.py
experiments/: getchain.py
lib/: color.py  nice_certificate.py
src/tlsserial/: __main__.py  cli.py  color.py  happy_certificate.py  helper.py  main.py  nice_certificate.py  tlsserial.py
tests/: test_happy_certificate.py  test_helper.py  test_tlsserial.py
tlsserial/: cli.py  helper.py  nice_certificate.py
