[tool.poetry]
name = "tlsserial"
version = "0.1.0"
description = "Examine TLS certificates, locally or online"
authors = ["Tom Matthews <anon@pseudo.url>"]
readme = "README.md"

[tool.poetry.scripts]
tlsserial = 'tlsserial.main:main'

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.6"
cryptography = "^41.0"
pendulum = "^3.0"
certifi = "*" # Used in experiments
pyopenssl = "*" # Used in experiments
[tool.poetry.group.dev.dependencies]
types-cryptography = "^3.3.23.2"
mypy = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]


[tool.ruff.lint.per-file-ignores]
#"__init__.py" = ["E402"] # ignore import errors in all __init__.py files
"**/{tests,docs,tools}/*" = ["E402"] # ignore import errors in selected subdirectories.